--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,7 @@ _deps
 *-prefix/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake,clion,clion+all,clion+iml,c
+/.ninja_deps
+/.ninja_log
+/build.ninja
+/.cmake/
